--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@supabase/ui": "^0.32.2",
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
+    "@types/react-icons": "^3.0.0",
+    "date-fns": "^2.23.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-loader-spinner": "^4.0.0",
+    "react-palette": "^1.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-supabase": "^0.2.0",
