--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@craco/craco": "^6.2.0",
     "@supabase/supabase-js": "^1.21.1",
     "@supabase/ui": "^0.32.2",
+    "@tailwindcss/forms": "^0.3.3",
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
     "@types/react-icons": "^3.0.0",
