--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-icons": "^3.0.0",
     "date-fns": "^2.23.0",
+    "headless-pagination": "^0.1.3",
+    "headless-pagination-react": "^0.1.4",
     "react": "^17.0.2",
     "react-collapse": "^5.1.0",
     "react-dom": "^17.0.2",
