--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
     "@types/react-icons": "^3.0.0",
+    "chroma-js": "^2.1.2",
     "date-fns": "^2.23.0",
     "headless-pagination": "^0.1.3",
     "headless-pagination-react": "^0.1.4",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.7",
+    "@types/chroma-js": "^2.1.3",
     "@types/lodash": "^4.14.172",
     "@types/react-collapse": "^5.0.1",
     "@types/react-router-dom": "^5.1.8",
