--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-supabase": "^0.2.0",
+    "react-use": "^17.3.1",
     "tailwindcss-brand-colors": "^0.3.1",
     "timeago-react": "^3.0.3"
   },
