--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate": "npx prisma generate",
     "dev": "set NODE_ENV=development&&ts-node-dev --transpile-only --no-notify src/app.ts",
-    "build": "tsc",
+    "build": "tsc && npx prisma generate",
     "start": "set NODE_ENV=production&&node ./dist/src/app.js"
   },
   "author": "",
