--- a/package.json
+++ b/package.json
@@ -2,42 +2,52 @@
   "name": "cinemang-frontend",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@craco/craco": "^6.2.0",
-    "@supabase/supabase-js": "^1.21.1",
-    "@tailwindcss/forms": "^0.3.3",
-    "@types/react": "^17.0.18",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-icons": "^3.0.0",
-    "chroma-js": "^2.1.2",
-    "date-fns": "^2.23.0",
-    "headless-pagination": "^0.1.3",
-    "headless-pagination-react": "^0.1.4",
-    "react": "^17.0.2",
-    "react-collapse": "^5.1.0",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
-    "react-loader-spinner": "^4.0.0",
-    "react-palette": "^1.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-supabase": "^0.2.0",
-    "react-use": "^17.3.1",
-    "tailwindcss-brand-colors": "^0.3.1",
-    "timeago-react": "^3.0.3"
-  },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "generate": "graphql-codegen --config codegen.yml"
   },
+  "dependencies": {
+    "@supabase/supabase-js": "^1.29.1",
+    "@tailwindcss/forms": "^0.4.0",
+    "chroma-js": "^2.1.2",
+    "date-fns": "^2.28.0",
+    "headless-pagination": "^0.1.3",
+    "headless-pagination-react": "^0.1.4",
+    "react": "^17.0.2",
+    "react-collapse": "^5.1.1",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-loader-spinner": "^4.0.0",
+    "react-palette": "^1.0.2",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
+    "react-supabase": "^0.2.0",
+    "react-use": "^17.3.1",
+    "tailwindcss": "^3.0.7",
+    "tailwindcss-brand-colors": "^0.3.1",
+    "timeago-react": "^3.0.4"
+  },
+  "devDependencies": {
+    "@types/chroma-js": "^2.1.3",
+    "@types/lodash": "^4.14.178",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-icons": "^3.0.0",
+    "@types/react-collapse": "^5.0.1",
+    "@types/react-router-dom": "^5.3.2",
+    "autoprefixer": "^10.4.0",
+    "eslint": "^8.5.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.4"
+  },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": []
   },
   "browserslist": {
     "production": [
@@ -50,21 +60,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss7-compat": "^2.2.7",
-    "@types/chroma-js": "^2.1.3",
-    "@types/lodash": "^4.14.172",
-    "@types/react-collapse": "^5.0.1",
-    "@types/react-router-dom": "^5.1.8",
-    "autoprefixer": "^9.8.6",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "postcss": "^7.0.36",
-    "prettier": "^2.3.2",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7",
-    "typescript": "^4.3.5"
   },
   "proxy": "http://localhost:4000"
 }
