--- a/package.json
+++ b/package.json
@@ -28,15 +28,16 @@
     "react-use": "^17.3.1",
     "tailwindcss": "^3.0.7",
     "tailwindcss-brand-colors": "^0.3.1",
-    "timeago-react": "^3.0.4"
+    "timeago-react": "^3.0.4",
+    "use-query-params": "^2.1.1"
   },
   "devDependencies": {
     "@types/chroma-js": "^2.1.3",
     "@types/lodash": "^4.14.178",
     "@types/react": "^17.0.38",
+    "@types/react-collapse": "^5.0.1",
     "@types/react-dom": "^17.0.11",
     "@types/react-icons": "^3.0.0",
-    "@types/react-collapse": "^5.0.1",
     "@types/react-router-dom": "^5.3.2",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.5.0",
@@ -60,6 +61,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:4000"
+  }
 }
