--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^1.29.1",
     "@tailwindcss/forms": "^0.4.0",
+    "@universemc/react-palette": "^1.0.3",
     "chroma-js": "^2.1.2",
     "date-fns": "^2.28.0",
     "headless-pagination": "^0.1.3",
@@ -21,7 +22,6 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^4.0.0",
-    "react-palette": "^1.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-supabase": "^0.2.0",
