--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.0",
     "node-schedule": "^2.0.0",
     "pg": "^8.7.1",
+    "yargs": "^17.6.0",
     "zod": "^3.7.3"
   },
   "devDependencies": {
