add popularity calc research script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "generate": "npx prisma generate",
     "dev": "set NODE_ENV=development&&ts-node-dev --transpile-only --no-notify src/app.ts",
     "build": "tsc && npx prisma generate",
-    "start": "set NODE_ENV=production&&node ./dist/src/app.js"
+    "start": "set NODE_ENV=production&&node ./dist/src/app.js",
+    "calc": "set NODE_ENV=development&&ts-node-dev --transpile-only --no-notify src/temp.ts"
   },
   "author": "",
   "license": "ISC",
