--- a/package.json
+++ b/package.json
@@ -3,59 +3,66 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "generate": "graphql-codegen --config codegen.yml"
+    "build": "vite build",
+    "dev": "vite dev",
+    "format": "prettier --write .",
+    "lint:format": "prettier --cache --check .",
+    "lint": "eslint --cache .",
+    "test": "npm-run-all --parallel tsc:check vitest:run lint lint:format",
+    "tsc:check": "tsc",
+    "vitest:run": "vitest run"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.3",
+    "@lauriys/react-palette": "1.0.5",
     "@supabase/supabase-js": "^1.35.7",
     "@tailwindcss/forms": "^0.5.3",
-    "@universemc/react-palette": "^1.0.3",
     "chroma-js": "^2.4.2",
     "date-fns": "^2.29.3",
     "headless-pagination": "^0.1.3",
     "headless-pagination-react": "^0.1.4",
-    "react": "^17.0.2",
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
     "react-collapse": "^5.1.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.0",
     "react-use": "^17.4.0",
-    "tailwindcss": "^3.1.8",
     "use-query-params": "^2.1.1"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.3",
+    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@types/chroma-js": "^2.1.4",
     "@types/lodash": "^4.14.186",
-    "@types/react": "^17.0.38",
+    "@types/node": "^18.7.20",
+    "@types/prettier": "^2.7.1",
+    "@types/react": "^18.0.21",
     "@types/react-collapse": "^5.0.1",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-icons": "^3.0.0",
+    "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
+    "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.12",
-    "eslint": "^8.25.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "postcss": "^8.4.17",
+    "eslint": "^8.24.0",
+    "eslint-import-resolver-typescript": "^3.5.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-typescript-sort-keys": "^2.1.0",
+    "nodemon": "^2.0.19",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
-    "typescript": "^4.8.4"
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "tailwindcss": "^3.1.8",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.3",
+    "vite": "^3.1.3",
+    "vitest": "^0.23.4"
   },
-  "eslintConfig": {
-    "extends": []
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ]
 }
