--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "set NODE_ENV=development&&ts-node-dev --transpile-only --no-notify src/app.ts",
     "build": "tsc && npx prisma generate",
     "start": "set NODE_ENV=production&&node ./dist/src/app.js",
-    "calc": "set NODE_ENV=development&&ts-node-dev --transpile-only --no-notify src/temp.ts"
+    "research": "set NODE_ENV=development&&ts-node-dev --transpile-only --no-notify src/research.ts"
   },
   "author": "",
   "license": "ISC",
