--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate": "npx prisma generate",
@@ -22,15 +23,18 @@
     "date-fns": "^2.23.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "filesize": "^10.0.5",
     "lodash": "^4.17.21",
     "log4js": "^6.3.0",
     "morgan": "^1.10.0",
+    "node-cache": "^5.1.2",
     "node-schedule": "^2.0.0",
     "pg": "^8.7.1",
     "yargs": "^17.6.0",
     "zod": "^3.7.3"
   },
   "devDependencies": {
+    "@tsconfig/node16": "^1.0.3",
     "@types/bluebird": "^3.5.36",
     "@types/node": "^16.6.1",
     "@types/node-schedule": "^1.3.2",
