--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "set NODE_ENV=development&&ts-node-dev --transpile-only --no-notify src/app.ts",
     "build": "tsc && npx prisma generate",
     "start": "set NODE_ENV=production&&node ./dist/src/app.js",
-    "research": "set NODE_ENV=development&&ts-node-dev --transpile-only --no-notify src/research.ts"
+    "research": "set NODE_ENV=development&&ts-node-dev --transpile-only --no-notify src/research.ts",
+    "experiments": "set NODE_ENV=development&&ts-node-dev --transpile-only --no-notify src/experiments.ts"
   },
   "author": "",
   "license": "ISC",
