--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.4.2",
     "react-use": "^17.4.0",
     "use-query-params": "^2.1.1"
