--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.29.3",
     "headless-pagination": "^0.1.3",
     "headless-pagination-react": "^0.1.4",
+    "jotai": "^1.8.6",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-collapse": "^5.1.1",
