--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@lauriys/react-palette": "1.0.5",
     "@supabase/supabase-js": "^1.35.7",
     "@tailwindcss/forms": "^0.5.3",
+    "axios": "^1.1.3",
     "chroma-js": "^2.4.2",
     "date-fns": "^2.29.3",
     "headless-pagination": "^0.1.3",
