--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "axios": "^1.1.3",
     "chroma-js": "^2.4.2",
     "date-fns": "^2.29.3",
-    "headless-pagination": "^0.1.3",
-    "headless-pagination-react": "^0.1.4",
     "jotai": "^1.8.6",
     "lodash": "^4.17.21",
+    "node-vibrant": "3.1.6",
+    "paginator": "^1.0.0",
     "react": "^18.2.0",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
