--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-lite-youtube-embed": "^2.3.1",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.2",
     "react-use": "^17.4.0",
