--- a/package.json
+++ b/package.json
@@ -10,32 +10,22 @@
     "dev": "set NODE_OPTIONS=--max_old_space_size=512&&set NODE_ENV=development&&ts-node-dev --transpile-only --no-notify src/app.ts",
     "build": "tsc && npx prisma generate",
     "start": "set NODE_ENV=production&&node ./dist/src/app.js",
-    "research": "set NODE_ENV=development&&ts-node-dev --transpile-only --no-notify src/research.ts",
-    "experiments": "set NODE_ENV=development&&ts-node-dev --transpile-only --no-notify src/experiments.ts",
     "raw-response-loader": "set NODE_ENV=development&&ts-node-dev --transpile-only --no-notify src/raw-response-loader.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.4.0",
-    "@supabase/supabase-js": "^1.22.0",
     "@types/lodash": "^4.14.172",
     "agentkeepalive": "^4.2.1",
     "axios": "^0.21.4",
     "bluebird": "^3.7.2",
     "date-fns": "^2.23.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "filesize": "^10.0.5",
     "lodash": "^4.17.21",
     "log4js": "^6.3.0",
-    "morgan": "^1.10.0",
-    "node-cache": "^5.1.2",
     "node-schedule": "^2.0.0",
-    "pg": "^8.7.1",
-    "redis": "^4.4.0",
-    "yargs": "^17.6.0",
-    "zod": "^3.7.3"
+    "yargs": "^17.6.0"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
@@ -43,6 +33,7 @@
     "@types/node": "^16.6.1",
     "@types/node-schedule": "^1.3.2",
     "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
     "prettier": "^2.3.2",
