--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "use-query-params": "^2.1.1"
   },
   "devDependencies": {
+    "@ehicks05/eslint-config": "^0.1.4",
     "@swc/core": "^1.3.3",
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@types/chroma-js": "^2.1.4",
@@ -45,19 +46,11 @@
     "@types/react": "^18.0.21",
     "@types/react-collapse": "^5.0.1",
     "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.12",
-    "eslint": "^8.24.0",
-    "eslint-import-resolver-typescript": "^3.5.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-react": "^7.31.8",
-    "eslint-plugin-typescript-sort-keys": "^2.1.0",
     "nodemon": "^2.0.19",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.16",
-    "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.8",
     "ts-node": "^10.9.1",
