--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@floating-ui/react-dom-interactions": "^0.11.0",
     "@headlessui/react": "^1.7.3",
     "@lauriys/react-palette": "1.0.5",
+    "@radix-ui/react-hover-card": "^1.0.5",
     "@supabase/supabase-js": "^2.1.0",
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.1.3",
