--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@radix-ui/react-hover-card": "^1.0.5",
     "@supabase/supabase-js": "^2.1.0",
     "@tailwindcss/forms": "^0.5.3",
+    "@tanstack/react-query": "^4.29.3",
+    "@tanstack/react-query-devtools": "^4.29.3",
     "axios": "^1.1.3",
     "chroma-js": "^2.4.2",
     "date-fns": "^2.29.3",
@@ -31,7 +33,6 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-lite-youtube-embed": "^2.3.1",
-    "react-query": "^3.39.2",
     "react-router-dom": "^6.4.2",
     "react-use": "^17.4.0",
     "use-query-params": "^2.1.1"
