--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "vite build",
     "dev": "vite dev",
     "format": "prettier --write .",
+    "generate": "npx supabase gen types typescript --project-id hfqqysladnxliwtnrdya --schema cinemang > src/generated/supabase.ts",
     "lint:format": "prettier --cache --check .",
     "lint": "eslint --cache .",
     "test": "npm-run-all --parallel tsc:check vitest:run lint lint:format",
@@ -53,6 +54,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.16",
     "prettier-plugin-tailwindcss": "^0.1.13",
+    "supabase": "^1.50.11",
     "tailwindcss": "^3.1.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3",
