--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/app.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate": "npx prisma generate",
-    "dev": "set NODE_OPTIONS=--max_old_space_size=512&&set NODE_ENV=development&&ts-node-dev --transpile-only --no-notify src/app.ts",
+    "dev": "set NODE_OPTIONS=--max_old_space_size=512&&set NODE_ENV=development&&nodemon --exec node --loader ts-node/esm src/app.ts",
     "build": "tsc && npx prisma generate",
-    "start": "set NODE_ENV=production&&node ./dist/src/app.js",
+    "start": "set NODE_ENV=production&&node ./dist/src/app.js"
   },
   "author": "",
   "license": "ISC",
@@ -27,17 +26,15 @@
     "yargs": "^17.6.0"
   },
   "devDependencies": {
+    "@ehicks05/eslint-config": "^0.1.5",
     "@tsconfig/node16": "^1.0.3",
-    "@types/bluebird": "^3.5.36",
+    "@types/bluebird": "^3.5.38",
     "@types/node": "^16.6.1",
     "@types/node-schedule": "^2.1.0",
-    "eslint": "^8.28.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.3.2",
+    "@types/yargs": "^17.0.24",
+    "nodemon": "^2.0.22",
     "prisma": "^4.4.0",
-    "ts-node-dev": "^2.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   }
 }
