--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "npx prisma generate",
     "dev": "set NODE_OPTIONS=--max_old_space_size=512&&set NODE_ENV=development&&nodemon --exec node --loader ts-node/esm src/app.ts",
     "build": "tsc && npx prisma generate",
-    "start": "set NODE_ENV=production&&node ./dist/src/app.js"
+    "start": "set NODE_ENV=production&&node ./dist/app.js"
   },
   "author": "",
   "license": "ISC",
