--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate": "npx prisma generate",
-    "dev": "set NODE_OPTIONS=--max_old_space_size=512&&set NODE_ENV=development&&nodemon --exec node --loader ts-node/esm src/app.ts",
+    "dev": "set NODE_OPTIONS=--max_old_space_size=480&&set NODE_ENV=development&&nodemon --exec node --loader ts-node/esm src/app.ts",
     "build": "tsc && npx prisma generate",
-    "start": "set NODE_ENV=production&&node ./dist/app.js"
+    "start": "set NODE_OPTIONS=--max_old_space_size=480&&set NODE_ENV=production&&node ./dist/app.js"
   },
   "author": "",
   "license": "ISC",
