--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@headlessui/react": "^1.7.3",
     "@lauriys/react-palette": "1.0.5",
     "@radix-ui/react-hover-card": "^1.0.5",
+    "@radix-ui/react-popover": "^1.0.5",
+    "@radix-ui/react-tooltip": "^1.0.5",
     "@supabase/supabase-js": "^2.1.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.29.3",
