--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite dev",
     "format": "prettier --write .",
     "generate": "npx supabase gen types typescript --project-id sgermtzfqlzegifqvold --schema cinemang > src/generated/supabase.ts",
+    "generate-local": "npx supabase gen types typescript --local --schema public > src/generated/supabase.ts",
     "lint:format": "prettier --cache --check .",
     "lint": "eslint --cache .",
     "test": "npm-run-all --parallel tsc:check vitest:run lint lint:format",
