--- a/package.json
+++ b/package.json
@@ -15,51 +15,53 @@
     "vitest:run": "vitest run"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.3",
+    "@headlessui/react": "^1.7.18",
     "@lauriys/react-palette": "1.0.5",
-    "@radix-ui/react-hover-card": "^1.0.5",
-    "@radix-ui/react-popover": "^1.0.5",
-    "@radix-ui/react-tooltip": "^1.0.5",
-    "@supabase/supabase-js": "^2.1.0",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tanstack/react-query": "^4.29.3",
-    "@tanstack/react-query-devtools": "^4.29.3",
-    "axios": "^1.1.3",
+    "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@supabase/supabase-js": "^2.39.7",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/react-query": "^5.24.1",
+    "@tanstack/react-query-devtools": "^5.24.1",
+    "@tanstack/react-router": "^1.17.4",
+    "axios": "^1.6.7",
     "chroma-js": "^2.4.2",
-    "date-fns": "^2.29.3",
-    "jotai": "^1.8.6",
+    "date-fns": "^3.3.1",
+    "jotai": "^2.7.0",
     "lodash": "^4.17.21",
     "node-vibrant": "3.1.6",
     "paginator": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
-    "react-lite-youtube-embed": "^2.3.52",
-    "react-router-dom": "^6.4.2",
-    "react-use": "^17.4.0",
-    "use-query-params": "^2.1.1"
+    "react-icons": "^5.0.1",
+    "react-lite-youtube-embed": "^2.4.0",
+    "react-router-dom": "^6.22.2",
+    "react-use": "^17.5.0",
+    "use-query-params": "^2.2.1"
   },
   "devDependencies": {
     "@ehicks05/eslint-config": "^0.1.5",
-    "@swc/core": "^1.3.3",
-    "@types/chroma-js": "^2.1.4",
-    "@types/lodash": "^4.14.186",
-    "@types/node": "^18.7.20",
-    "@types/prettier": "^2.7.1",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.12",
-    "nodemon": "^2.0.19",
+    "@swc/core": "^1.4.2",
+    "@tanstack/router-vite-plugin": "^1.16.5",
+    "@types/chroma-js": "^2.4.4",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "^20.11.22",
+    "@types/prettier": "^3.0.0",
+    "@types/react": "^18.2.60",
+    "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
+    "nodemon": "^3.1.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.16",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "supabase": "^1.88.0",
-    "tailwindcss": "^3.3.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.3",
-    "vite": "^4.3.3",
-    "vitest": "^0.30.1"
+    "postcss": "^8.4.35",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "supabase": "^1.145.4",
+    "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.4",
+    "vitest": "^1.3.1"
   },
   "browserslist": [
     ">0.2%",
