--- a/package.json
+++ b/package.json
@@ -41,24 +41,21 @@
     "use-query-params": "^2.2.1"
   },
   "devDependencies": {
-    "@ehicks05/eslint-config": "^0.1.5",
+    "@biomejs/biome": "1.5.3",
     "@swc/core": "^1.4.2",
     "@tanstack/router-vite-plugin": "^1.16.5",
     "@types/chroma-js": "^2.4.4",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.22",
-    "@types/prettier": "^3.0.0",
     "@types/react": "^18.2.60",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
-    "nodemon": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.35",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "supabase": "^1.145.4",
     "tailwindcss": "^3.4.1",
-    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vite": "^5.1.4",
     "vitest": "^1.3.1"
