--- a/biome.json
+++ b/biome.json
@@ -18,6 +18,6 @@
 		}
 	},
 	"files": {
-		"ignore": ["./src/generated/supabase.ts"]
+		"ignore": ["./src/generated/supabase.ts", "./**/*.gen.ts"]
 	}
 }
