--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "^5.24.1",
     "@tanstack/react-query-devtools": "^5.24.1",
     "@tanstack/react-router": "^1.18.1",
+    "@tanstack/router-devtools": "^1.18.1",
     "axios": "^1.6.7",
     "chroma-js": "^2.4.2",
     "date-fns": "^3.3.1",
