--- a/biome.json
+++ b/biome.json
@@ -6,7 +6,8 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true
+			"recommended": true,
+			"suspicious": { "noExplicitAny": "warn" }
 		}
 	},
 	"formatter": {
