--- a/package.json
+++ b/package.json
@@ -45,16 +45,16 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
+		"@tailwindcss/postcss": "^4.0.15",
 		"@types/chroma-js": "^3.1.1",
 		"@types/lodash-es": "^4.17.12",
 		"@types/node": "^22.13.10",
 		"@types/react": "^19.0.12",
 		"@types/react-dom": "^19.0.4",
 		"@vitejs/plugin-react": "^4.3.4",
-		"autoprefixer": "^10.4.21",
 		"postcss": "^8.5.3",
 		"supabase": "^2.19.7",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.0.15",
 		"typescript": "^5.8.2",
 		"vite-tsconfig-paths": "^5.1.4"
 	},
