update deps, lint,

--- a/be/biome.json
+++ b/be/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.5.3/schema.json",
+	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
 	"organizeImports": {
 		"enabled": true
 	},
@@ -19,7 +19,6 @@
 		}
 	},
 	"files": {
-		"include": ["./src/**/*.*"],
-		"ignore": ["./src/app/components/SearchForm.tsx"]
+		"include": ["./src/**/*"]
 	}
 }
