--- a/be/package.json
+++ b/be/package.json
@@ -4,38 +4,36 @@
 	"description": "",
 	"main": "src/app.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
 		"generate": "npx prisma generate",
 		"dev": "set NODE_OPTIONS=--max_old_space_size=480&&set NODE_ENV=development&&tsx watch src/app.ts -s=true",
 		"build": "tsc && npx prisma generate",
-		"start": "set NODE_OPTIONS=--max_old_space_size=480&&set NODE_ENV=production&&node ./dist/app.js --syncOnStart",
-		"supabase-generate-local": "npx supabase gen types typescript --local --schema public > ./supabase.ts"
+		"start": "set NODE_OPTIONS=--max_old_space_size=480&&set NODE_ENV=production&&node ./dist/app.js --syncOnStart"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@prisma/client": "^5.3.1",
-		"@types/lodash": "^4.14.172",
-		"agentkeepalive": "^4.2.1",
-		"axios": "^1.7.2",
+		"@prisma/client": "^6.5.0",
+		"agentkeepalive": "^4.6.0",
+		"axios": "^1.8.4",
 		"bluebird": "^3.7.2",
-		"date-fns": "^3.6.0",
-		"dotenv": "^16.0.3",
-		"lodash": "^4.17.21",
-		"log4js": "^6.3.0",
-		"node-schedule": "^2.1.0",
-		"yargs": "^17.6.0"
+		"date-fns": "^4.1.0",
+		"dotenv": "^16.4.7",
+		"lodash-es": "^4.17.21",
+		"log4js": "^6.9.1",
+		"node-schedule": "^2.1.1",
+		"yargs": "^17.7.2"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.5.3",
-		"@tsconfig/node16": "^16.1.3",
-		"@types/bluebird": "^3.5.38",
-		"@types/node": "^16.6.1",
-		"@types/node-schedule": "^2.1.0",
-		"@types/yargs": "^17.0.24",
-		"nodemon": "^2.0.22",
-		"prisma": "^5.3.1",
-		"tsx": "^4.11.0",
-		"typescript": "^4.9.3"
+		"@biomejs/biome": "1.9.4",
+		"@tsconfig/node22": "^22.0.0",
+		"@types/bluebird": "^3.5.42",
+		"@types/lodash-es": "^4.17.12",
+		"@types/node": "^22.13.11",
+		"@types/node-schedule": "^2.1.7",
+		"@types/yargs": "^17.0.33",
+		"nodemon": "^3.1.9",
+		"prisma": "^6.5.0",
+		"tsx": "^4.19.3",
+		"typescript": "^5.8.2"
 	}
 }
