--- a/be/package.json
+++ b/be/package.json
@@ -2,6 +2,7 @@
 	"name": "cinemang-backend",
 	"version": "1.0.0",
 	"description": "",
+	"type": "module",
 	"main": "src/app.js",
 	"scripts": {
 		"generate": "npx prisma generate",
