--- a/be/tsconfig.json
+++ b/be/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "@tsconfig/node22/tsconfig.json",
-  "compilerOptions": {"outDir": "dist"},
+  "compilerOptions": {
+    "outDir": "dist", 
+    "paths": {
+			"~/*": ["./src/*"]
+		}
+  },
   "include": ["src"],
   "exclude": ["node_modules"],
 }
