--- a/be/package.json
+++ b/be/package.json
@@ -22,7 +22,8 @@
 		"lodash-es": "^4.17.21",
 		"log4js": "^6.9.1",
 		"node-schedule": "^2.1.1",
-		"yargs": "^17.7.2"
+		"yargs": "^17.7.2",
+		"vite-node": "^3.0.9"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
@@ -35,7 +36,6 @@
 		"prisma": "^6.5.0",
 		"tsx": "^4.19.3",
 		"typescript": "^5.8.2",
-		"vite": "^6.2.2",
-		"vite-node": "^3.0.9"
+		"vite": "^6.2.2"
 	}
 }
