--- a/.github/workflows/dokku-deploy.yml
+++ b/.github/workflows/dokku-deploy.yml
@@ -1,10 +1,12 @@
 ---
-name: 'deploy'
+name: 'deploy-backend'
 
 on:
   push:
     branches:
       - master
+    paths: 
+      - be/**
 
 jobs:
   deploy:
